JDK 8 support and test rename